# project-moonshine

./: .gitignore  ENVIRONMENT.md  E_AND_O.md  GEMINI.md  README.md  ROADMAP.md  SOFTWARE_ROADMAP.md  WAIVER.md
.github/workflows/: physics-test.yml
data/: feedstocks.yaml
moonshine-sim/: README.md  analyze_sourcing.py  fractional_distillation_demo.py  pyproject.toml  simulate_startup.py  test_gearbox_thermal.py  test_gravity_head.py  test_maintenance.py  test_thermal_battery.py
moonshine-sim/moonshine/: designs.py  evaluator.py  impact.py  thermo.py
moonshine-sim/tests/: test_physics.py
