[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moonshine-sim"
version = "0.1.0"
description = "Thermodynamic simulation engine for Project Moonshine's organic rankine cycle."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Project Moonshine Team", email = "maintainers@project-moonshine.local"}
]
keywords = ["thermodynamics", "simulation", "cooling", "rankine-cycle"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/rshade/project-moonshine"
"Bug Tracker" = "https://github.com/rshade/project-moonshine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["moonshine*"]
